src/main/java/proyecto/generated/miParser.java
// Generated from C:/Users/Davo/Desktop/ProyectoCompiladores\miParser.g4 by ANTLR 4.9.1
package proyecto.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PyComa=1, COMA=2, UNDERSC=3, POINT=4, COMIDOBLES=5, ASSIGN=6, VIR=7, DOSPUN=8, 
		PIZQ=9, PDER=10, LLAIZQ=11, LLADER=12, PCIZQ=13, PCDER=14, REOPERATOR=15, 
		ADDITIVEOP=16, MULTIPLICATEOP=17, OPERATOR=18, BOOLEAN=19, CHAR=20, INT=21, 
		STRING=22, TRUE=23, FALSE=24, SUM=25, SUB=26, OR=27, MUL=28, DIV=29, AND=30, 
		INTERROGATION=31, UNARY=32, IF=33, ELSE=34, WHILE=35, RETURN=36, CLASS=37, 
		NEW=38, LENGTH=39, ID=40, INTLITERAL=41, REALLITERAL=42, STRINGLITERAL=43, 
		CHARLITERAL=44, WS=45;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_block = 2, RULE_functionDeclaration = 3, 
		RULE_formalParams = 4, RULE_formalParam = 5, RULE_whileStatement = 6, 
		RULE_ifStatement = 7, RULE_returnStatement = 8, RULE_classDeclaration = 9, 
		RULE_classVariableDeclaration = 10, RULE_variableDeclaration = 11, RULE_type = 12, 
		RULE_simpleType = 13, RULE_arrayType = 14, RULE_assignment = 15, RULE_arrayAssignment = 16, 
		RULE_expression = 17, RULE_simpleExpression = 18, RULE_term = 19, RULE_factor = 20, 
		RULE_unary = 21, RULE_allocationExpression = 22, RULE_arrayAllocationExpression = 23, 
		RULE_subExpression = 24, RULE_functionCall = 25, RULE_classCall = 26, 
		RULE_actualParams = 27, RULE_arrayLookup = 28, RULE_arrayLength = 29, 
		RULE_boolLiteral = 30, RULE_literal = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "block", "functionDeclaration", "formalParams", 
			"formalParam", "whileStatement", "ifStatement", "returnStatement", "classDeclaration", 
			"classVariableDeclaration", "variableDeclaration", "type", "simpleType", 
			"arrayType", "assignment", "arrayAssignment", "expression", "simpleExpression", 
			"term", "factor", "unary", "allocationExpression", "arrayAllocationExpression", 
			"subExpression", "functionCall", "classCall", "actualParams", "arrayLookup", 
			"arrayLength", "boolLiteral", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'_'", "'.'", "'\"'", "'='", "'~'", "':'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", null, null, null, null, "'boolean'", 
			"'char'", "'int'", "'string'", "'true'", "'false'", "'+'", "'-'", "'or'", 
			"'*'", "'/'", "'and'", "'!'", null, "'if'", "'else'", "'while'", "'return'", 
			"'class'", "'new'", "'lenght'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PyComa", "COMA", "UNDERSC", "POINT", "COMIDOBLES", "ASSIGN", "VIR", 
			"DOSPUN", "PIZQ", "PDER", "LLAIZQ", "LLADER", "PCIZQ", "PCDER", "REOPERATOR", 
			"ADDITIVEOP", "MULTIPLICATEOP", "OPERATOR", "BOOLEAN", "CHAR", "INT", 
			"STRING", "TRUE", "FALSE", "SUM", "SUB", "OR", "MUL", "DIV", "AND", "INTERROGATION", 
			"UNARY", "IF", "ELSE", "WHILE", "RETURN", "CLASS", "NEW", "LENGTH", "ID", 
			"INTLITERAL", "REALLITERAL", "STRINGLITERAL", "CHARLITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "miParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramSTContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramSTContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterProgramST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitProgramST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitProgramST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramSTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LLAIZQ) | (1L << BOOLEAN) | (1L << CHAR) | (1L << INT) | (1L << STRING) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << CLASS) | (1L << ID))) != 0)) {
				{
				{
				setState(64);
				statement();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableDeclarationSTContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public VariableDeclarationSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterVariableDeclarationST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitVariableDeclarationST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitVariableDeclarationST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatementSTContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStatementSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterIfStatementST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitIfStatementST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitIfStatementST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStatementSTContext extends StatementContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public ReturnStatementSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterReturnStatementST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitReturnStatementST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitReturnStatementST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockSTContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterBlockST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitBlockST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitBlockST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionDeclarationSTContext extends StatementContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionDeclarationSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterFunctionDeclarationST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitFunctionDeclarationST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitFunctionDeclarationST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayAssignmentSTContext extends StatementContext {
		public ArrayAssignmentContext arrayAssignment() {
			return getRuleContext(ArrayAssignmentContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public ArrayAssignmentSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterArrayAssignmentST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitArrayAssignmentST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitArrayAssignmentST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassDeclarationSTContext extends StatementContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassDeclarationSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterClassDeclarationST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitClassDeclarationST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitClassDeclarationST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallSTContext extends StatementContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public FunctionCallSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterFunctionCallST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitFunctionCallST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitFunctionCallST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassCallSTContext extends StatementContext {
		public ClassCallContext classCall() {
			return getRuleContext(ClassCallContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public ClassCallSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterClassCallST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitClassCallST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitClassCallST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentSTContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public AssignmentSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterAssignmentST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitAssignmentST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitAssignmentST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatementSTContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public WhileStatementSTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterWhileStatementST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitWhileStatementST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitWhileStatementST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new VariableDeclarationSTContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				variableDeclaration();
				setState(71);
				match(PyComa);
				}
				break;
			case 2:
				_localctx = new ClassDeclarationSTContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				classDeclaration();
				}
				break;
			case 3:
				_localctx = new AssignmentSTContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				assignment();
				setState(75);
				match(PyComa);
				}
				break;
			case 4:
				_localctx = new ArrayAssignmentSTContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				arrayAssignment();
				setState(78);
				match(PyComa);
				}
				break;
			case 5:
				_localctx = new IfStatementSTContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				ifStatement();
				}
				break;
			case 6:
				_localctx = new WhileStatementSTContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				whileStatement();
				}
				break;
			case 7:
				_localctx = new ReturnStatementSTContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				returnStatement();
				setState(83);
				match(PyComa);
				}
				break;
			case 8:
				_localctx = new FunctionDeclarationSTContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(85);
				functionDeclaration();
				}
				break;
			case 9:
				_localctx = new BlockSTContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				block();
				}
				break;
			case 10:
				_localctx = new FunctionCallSTContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(87);
				functionCall();
				setState(88);
				match(PyComa);
				}
				break;
			case 11:
				_localctx = new ClassCallSTContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(90);
				classCall();
				setState(91);
				match(PyComa);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockASTContext extends BlockContext {
		public TerminalNode LLAIZQ() { return getToken(miParser.LLAIZQ, 0); }
		public TerminalNode LLADER() { return getToken(miParser.LLADER, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockASTContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterBlockAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitBlockAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitBlockAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			_localctx = new BlockASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(LLAIZQ);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LLAIZQ) | (1L << BOOLEAN) | (1L << CHAR) | (1L << INT) | (1L << STRING) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << CLASS) | (1L << ID))) != 0)) {
				{
				{
				setState(96);
				statement();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(LLADER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	 
		public FunctionDeclarationContext() { }
		public void copyFrom(FunctionDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionDeclarationASTContext extends FunctionDeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode PIZQ() { return getToken(miParser.PIZQ, 0); }
		public TerminalNode PDER() { return getToken(miParser.PDER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FormalParamsContext formalParams() {
			return getRuleContext(FormalParamsContext.class,0);
		}
		public FunctionDeclarationASTContext(FunctionDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterFunctionDeclarationAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitFunctionDeclarationAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitFunctionDeclarationAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDeclaration);
		int _la;
		try {
			_localctx = new FunctionDeclarationASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			type();
			setState(105);
			match(ID);
			setState(106);
			match(PIZQ);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << CHAR) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				setState(107);
				formalParams();
				}
			}

			setState(110);
			match(PDER);
			setState(111);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParamsContext extends ParserRuleContext {
		public FormalParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParams; }
	 
		public FormalParamsContext() { }
		public void copyFrom(FormalParamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FormalParamsASTContext extends FormalParamsContext {
		public List<FormalParamContext> formalParam() {
			return getRuleContexts(FormalParamContext.class);
		}
		public FormalParamContext formalParam(int i) {
			return getRuleContext(FormalParamContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(miParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(miParser.COMA, i);
		}
		public FormalParamsASTContext(FormalParamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterFormalParamsAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitFormalParamsAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitFormalParamsAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalParamsContext formalParams() throws RecognitionException {
		FormalParamsContext _localctx = new FormalParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_formalParams);
		int _la;
		try {
			_localctx = new FormalParamsASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			formalParam();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(114);
				match(COMA);
				setState(115);
				formalParam();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParamContext extends ParserRuleContext {
		public FormalParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParam; }
	 
		public FormalParamContext() { }
		public void copyFrom(FormalParamContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FormalParamASTContext extends FormalParamContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public FormalParamASTContext(FormalParamContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).enterFormalParamAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miParserListener ) ((miParserListener)listener).exitFormalParamAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miParserVisitor ) return ((miParserVisitor<? extends T>)visitor).visitFormalParamAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalParamContext formalParam() throws RecognitionException {
		FormalParamContext _localctx = new FormalParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formalParam);
		try {
			_localctx = new FormalParamASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			type();
			setState(122);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
